updated styles for UIUX projects and DS projects on larger screens, fixed card size bug for project cards that caused some cards to be larger than others messing up grid spacing.

--- a/Andrew-Marks-Portfolio-Website/css/style.css
+++ b/Andrew-Marks-Portfolio-Website/css/style.css
@@ -607,6 +607,7 @@ Large screens
         box-shadow:0px 0px 0px 3px black inset;
         width: 25vw;
         z-index: 10;
+        min-height: 500px;
     }
 
     .project-card:hover {
@@ -815,6 +816,34 @@ small screens
 }
 
 
+/*************************************
+large screens
+************************************/
+@media (min-width: 800px) {
+    .projects--uiux-container, .projects--ds-container {
+        margin: 100px 7vw 40px 7vw;
+        background-color: var(--clr-white);
+        border-radius: 40px;
+        padding: 40px;
+        width: 86vw;
+        box-shadow: var(--bs);
+    }
+
+    .projects--cards-container {
+        margin-top: 40px;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        gap: 40px 40px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .projects--section-title {
+        font-size: var(--fs-h1);
+        font-weight: var(--fw-bold);
+        color: var(--clr-headings);
+    }
+}
 
 
 
